fixing some icon spacing and inheriting color?

--- a/plugin/base.css
+++ b/plugin/base.css
@@ -28,6 +28,7 @@
 
 body {
   color: black;
+  fill: none;
   margin: 64px 64px 0 64px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
